# my_celery_app

./: appspec.yml  ecosystem.config.js  pyproject.toml  run_task.py
app/: __init__.py  tasks.py
scripts/: generate_env.sh  permissions.sh  setup.sh  start.sh  start_celery_pm2.sh  stop_celery_pm2.sh  validate.sh
